# ppgca-cd-2026-template

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/feat/: .gitkeep
data/raw/: .gitkeep
reports/: report.qmd
src/: app.py  ingest.py  model.py  transform.py  transform_advanced.py  transform_basic.py
